[package]
name = "regression_compare"
version = "0.1.0"
authors = ["bsoptei <bsoptei@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.13"

[dev-dependencies]
criterion = {version = "0.3.4", features= ["async_futures", "html_reports"]}
rand = "0.7.3"

[[bench]]
name = "benchmark"
harness = false